--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Dominos</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_launch">LaunchActivity</string>
+    <string name="title_activity_theme">ThemeActivity</string>
+    <string name="title_activity_niveau">NiveauActivity</string>
 
 </resources>
